--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node scripts/start.js"
+    "start": "webpack-dev-server --env=dev --mode=development"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +17,13 @@
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-app": "^3.1.1",
+    "html-webpack-plugin": "^3.0.6",
     "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.11",
     "webpack-dev-server": "^3.0.0"
   }
 }
