--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --env=dev --mode=development"
+    "dev": "webpack --env dev --mode development",
+    "start": "webpack-dev-server --env dev --mode development"
   },
   "author": "",
   "license": "ISC",
@@ -19,8 +20,11 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^3.1.1",
+    "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.1",
     "html-webpack-plugin": "^3.0.6",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.11",
