--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^3.1.1",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
     "html-webpack-plugin": "^3.0.6",
+    "mobx-react-devtools": "^5.0.1",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.11",
     "webpack-dev-server": "^3.0.0"
